# gpkit

./: .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  pylintrc  pylintrc-docs  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  publish.yml  pylint.yml  python-package.yml  tests.yml
docs/source/: conf.py
docs/source/examples/: autosweep.py  autosweep_output.txt  beam.py  beam_output.txt  boundschecking.py  breakdowns.py  checking_result_changes.py  debug.py  docstringparsing.py  evaluated_fixed_variables.py  evaluated_free_variables.py  external_constraint.py  external_function.py  external_sp.py  freeing_fixed_variables.py  gettingstarted.py  issue_1513.py  issue_1522.py  loose_constraintsets.py  migp.py  model_var_access.py  performance_modeling.py  performance_modeling_output.txt  plot_sweep1d.py  primal_infeasible_ex1.py  primal_infeasible_ex2.py  relaxation.py  simple_box.py  simple_sp.py  simpleflight.py  simpleflight_output.txt  sin_approx_example.py  sp_to_gp_sweep.py  sp_to_gp_sweep_output.txt  sub_multi_values.py  substitutions.py  tight_constraintsets.py  treemap.py  unbounded.py  vectorization.py  (+3 more)
docs/source/examples/breakdowns/: solartest.py
docs/source/figures/: solartest.py
gpkit/: __init__.py  breakdowns.py  build.py  exceptions.py  globals.py  keydict.py  repr_conventions.py  small_classes.py  small_scripts.py  solution_array.py  solution_ensemble.py  units.py  varkey.py
gpkit/constraints/: __init__.py  array.py  bounded.py  costed.py  gp.py  loose.py  model.py  prog_factories.py  relax.py  set.py  sgp.py  sigeq.py  single_equation.py  tight.py
gpkit/interactive/: plot_sweep.py  plotting.py  references.py  sankey.py  widgets.py
gpkit/nomials/: __init__.py  array.py  core.py  data.py  map.py  math.py  substitution.py  variables.py
gpkit/solutions/: __init__.py  solution.py
gpkit/solvers/: cvxopt.py  mosek_cli.py  mosek_conif.py
gpkit/tests/: from_paths.py  helpers.py  run_tests.py  t_constraints.py  t_examples.py  t_keydict.py  t_model.py  t_nomial_array.py  t_nomials.py  t_small.py  t_solution_array.py  t_sub.py  t_tools.py  t_vars.py  test_repo.py
gpkit/tools/: __init__.py  autosweep.py  docstring.py  tools.py
