[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "readme"]
name = "gpkit-core"
description = "Package for defining and manipulating geometric programming models."
authors = [
    { name = "Warren Hoburg", email = "whoburg@alum.mit.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.16.4",
    "pint>=0.8.1",
    "plotly>=5.3.0",
    "scipy>=1.7.0",
    "adce>=1.3.2",
    "cvxopt>=1.1.8",
    "matplotlib>=3.3.0"
]

[project.optional-dependencies]
lint = [
    "isort>=5.12.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://www.github.com/beautifulmachines/gpkit-core"

[tool.setuptools]
packages = ["gpkit", "gpkit.tools", "gpkit.interactive", "gpkit.constraints", "gpkit.nomials", "gpkit.tests", "gpkit.solvers"]
package-data = { "gpkit" = ["env/settings"] }

[tool.setuptools.dynamic]
version = { attr = "gpkit.__version__" } 
readme = { file = ["README.md"], content-type = "text/markdown"}

[tool.pytest.ini_options]
testpaths = ["gpkit/tests"]
python_files = ["test_*.py", "t_*.py"]
addopts = "-v --tb=short"
markers = [
    "solver: marks tests that require a solver",
    "cvxopt: marks tests that require cvxopt",
    "mosek: marks tests that require mosek",
]
